testing a diamond background for the monster page

--- a/css/monster.css
+++ b/css/monster.css
@@ -1,4 +1,10 @@
+.content {
+  background: url("../image/site/gray_background.png");
+  background-repeat: repeat;
+}
+
 h4 {
+  font-weight: normal;
   background-color: gray;
 }
 
