--- a/css/index.css
+++ b/css/index.css
@@ -8,32 +8,31 @@ body {
 }
 
 .sidebar-menu {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  color: #444;
 }
 
 .sidebar-menu a {
-  color: white;
+  color: #215dc6;
   text-decoration: none;
-  flex: initial 1 50%;
-  padding-right: 10px;
   font-size: 80%;
 }
 
 .sidebar-menu a:hover {
-  color: #83d0f2;
+  text-decoration: underline;
+}
+
+.sidebar_menu a:visited {
+  color: #a63d21;
 }
 
 .sidebar-category {
-  flex: 0 1 100%;
-  color: lightgray;
+  padding-left: 10px;
+  color: #444;
+  background-color: #c8e3ff;
 }
 
 .sidebar-sub-category {
-  flex: 0 1 100%;
   font-size: 80%;
-  color: gray;
 }
 
 .content {
@@ -42,6 +41,11 @@ body {
 
 .header {
   grid-area: header;
+  border-bottom: 1px ridge #333;
+}
+
+.header a {
+  color: #215dc6;
 }
 
 .footer {
@@ -61,9 +65,6 @@ body {
 }
 
 .box {
-  background-color: #444;
-  color: #fff;
-  border-radius: 5px;
   padding: 20px;
   font-size: 110%;
 }
