--- a/css/item.css
+++ b/css/item.css
@@ -1,4 +1,5 @@
 .heading {
+  background-color: #def;
   text-align: center;
   font-size: 1.3em;
   margin: 2em 0 0;
@@ -12,13 +13,20 @@
 
 .detail-name {
   flex: 0 0 100%;
-  background-color: gray;
+  border: 10px solid #def;
 }
 
 .detail-entry {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 5px;
+}
+
+.detail-section1 img {
+  background-color: #444;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .detail-table {
@@ -50,7 +58,8 @@ table {
 }
 
 table caption {
-  color: white;
+  color: #444;
+  background-color: #def;
   font-size: 1.5em;
   margin: 0.5em 0 0.75em;
 }
@@ -76,6 +85,19 @@ table th {
   font-size: 0.85em;
   letter-spacing: 0.1em;
   text-transform: uppercase;
+}
+
+table a {
+  color: #215dc6;
+  text-decoration: none;
+}
+
+table a:hover {
+  text-decoration: underline;
+}
+
+table a:visited {
+  color: #a63d21;
 }
 
 @media screen and (max-width: 600px) {
