--- a/css/monster.css
+++ b/css/monster.css
@@ -52,7 +52,7 @@ h4 {
 table {
   border: 1px solid #ccc;
   border-collapse: collapse;
-  margin: 10px;
+  margin-top: 10px;
   padding: 0;
 }
 
@@ -76,6 +76,7 @@ table td {
   padding: 0.625em;
   text-align: center;
   border: 1px solid #ccc;
+  font-size: 90%;
 }
 
 table th {
