--- a/css/item.css
+++ b/css/item.css
@@ -19,6 +19,12 @@ li {
   margin: 2em 0 0;
 }
 
+.item_desc {
+  padding: 10px;
+  background-color: #f5faff;
+  border-radius: 5px;
+}
+
 .detail {
   display: flex;
   flex-wrap: wrap;
