--- a/css/item.css
+++ b/css/item.css
@@ -12,6 +12,19 @@ li {
   font-size: 90%;
 }
 
+a {
+  color: #215dc6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
+  color: #a63d21;
+}
+
 .heading {
   background-color: #def;
   text-align: center;
@@ -106,19 +119,6 @@ table th {
   font-size: 0.85em;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-}
-
-table a {
-  color: #215dc6;
-  text-decoration: none;
-}
-
-table a:hover {
-  text-decoration: underline;
-}
-
-table a:visited {
-  color: #a63d21;
 }
 
 @media screen and (max-width: 600px) {
