--- a/css/dungeon.css
+++ b/css/dungeon.css
@@ -169,6 +169,14 @@ table th {
   font-size: 50%;
 }
 
+.sealed_room_monster_table_gold table {
+  font-size: 50%;
+}
+
+.sealed_room_monster_table_gold th {
+  background-color: gold;
+}
+
 .dungeon_monster_table_gold table {
   font-size: 70%;
 }
