--- a/css/dungeon.css
+++ b/css/dungeon.css
@@ -193,6 +193,14 @@ table th {
   font-size: 50%;
 }
 
+.road_to_the_end_monster_table_gold table {
+  font-size: 60%;
+}
+
+.road_to_the_end_monster_table_gold th {
+  background-color: gold;
+}
+
 .dungeon_monster_table_gold table {
   font-size: 70%;
 }
