--- a/css/item.css
+++ b/css/item.css
@@ -1,11 +1,30 @@
 h2 {
   padding-left: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-radius: 3px;
   background-color: #def;
+}
+
+h3 {
+  font-size: 100%;
+  font-weight: normal;
+  border-top: 1px solid #def;
+  border-bottom: 3px solid #def;
+  border-left: 10px solid #def;
+  border-right: 3px solid #def;
+  padding-left: 5px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius: 2px;
+  margin: 0;
 }
 
 h4 {
   font-weight: normal;
-  border: 10px solid #def;
+  font-size: 90%;
+  border-left: 15px solid #def;
+  padding: 0.3em;
 }
 
 li {
@@ -30,6 +49,10 @@ a:visited {
   text-align: center;
   font-size: 1.3em;
   margin: 2em 0 0;
+}
+
+.page_heading {
+  margin: 0;
 }
 
 .item_desc {
