--- a/css/index.css
+++ b/css/index.css
@@ -10,12 +10,14 @@ body {
 
 .sidebar {
   grid-area: sidebar;
+  padding-left: 8px;
+  padding-right: 9px;
 }
 
 .sidebar-menu {
   color: #444;
-  min-width: 186px;
-  max-width: 186px;
+  min-width: 182px;
+  max-width: 182px;
   line-height: 100%;
 }
 
