--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ body {
 .wrapper {
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: 1fr 8fr;
+  grid-template-columns: 200px auto;
   grid-template-areas:
     "header header"
     "sidebar content"
