--- a/css/seal.css
+++ b/css/seal.css
@@ -30,3 +30,13 @@
 .text_left {
   text-align: left;
 }
+
+dl {
+  font-size: 90%;
+}
+
+dt {
+  font-weight: bold;
+  margin-left: 1em;
+  margin-top: 1em;
+}
