--- a/css/index.css
+++ b/css/index.css
@@ -3,17 +3,13 @@ body {
   margin: 5px;
 }
 
-h1 {
+.header h1 {
   font-size: 100%;
-}
-
-h1 a {
-  text-decoration: none;
+  display: inline;
 }
 
 .header-image {
   vertical-align: middle;
-  float: left;
   margin-right: 20px;
 }
 
