--- a/css/index.css
+++ b/css/index.css
@@ -85,18 +85,13 @@ body {
   color: #215dc6;
 }
 
-.footer {
-  grid-area: footer;
-}
-
 .wrapper {
   display: grid;
   grid-gap: 5px;
   grid-template-columns: 200px auto;
   grid-template-areas:
     "header header"
-    "sidebar content"
-    "footer footer";
+    "sidebar content";
   background-color: #fff;
   color: #444;
 }
@@ -111,8 +106,7 @@ body {
     grid-template-areas:
       "header"
       "sidebar"
-      "content"
-      "footer";
+      "content";
   }
 
   .box {
