--- a/css/item.css
+++ b/css/item.css
@@ -214,6 +214,12 @@ dt {
   margin-bottom: 1em;
 }
 
+.table_less_padding td, 
+.table_less_padding th {
+  padding: 7px;
+  font-size: 80%;
+}
+
 @media screen and (max-width: 600px) {
   table {
     border: 0;
