correct padding for bow boy and boy cart images

--- a/css/monster.css
+++ b/css/monster.css
@@ -11,6 +11,14 @@
   padding: 10px;
 }
 
+#bow_boy_image {
+  padding-top: 40px;
+}
+
+#boy_cart_image {
+  padding-top: 25px;
+}
+
 h2 {
   padding-left: 10px;
   padding-top: 3px;
