working on the gameplay basics page

--- a/css/item.css
+++ b/css/item.css
@@ -180,6 +180,14 @@ table th {
   color: red;
 }
 
+.text_non_turn_ending {
+  color: #66f;
+}
+
+.text_turn_ending {
+  color: #f66;
+}
+
 dl {
   font-size: 90%;
 }
