--- a/css/item.css
+++ b/css/item.css
@@ -237,6 +237,10 @@ dt {
   padding-top: 1em;
 }
 
+.map_image {
+  float: right;
+}
+
 @media screen and (max-width: 600px) {
   table {
     border: 0;
