--- a/css/item.css
+++ b/css/item.css
@@ -254,7 +254,7 @@ dt {
   background-color: #eef5ff;
   text-align: right;
   padding: 5px;
-  font-size: 90%;
+  font-size: 80%;
 }
 
 .stat_table th {
@@ -269,6 +269,14 @@ td.stat_table_subheading {
 th.table_divider,
 td.table_divider {
   background-color: #fff
+}
+
+.stat_table_monsters td {
+  text-align: left;
+}
+
+td.stat_table_center {
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
